--- a/config_example.properties
+++ b/config_example.properties
@@ -1,3 +1,7 @@
+[nutritionix.com]
+nutritionix.application.id = <nutritionix app id>
+nutritionix.application.key = <nutritionix app key>
+
 [sheety.co]
 sheety.endpoint.url = https://api.sheety.co/<hash-code>/<project name>/workouts
 sheety.token = <authentication bearer code>
